--- a/templates/sample2.html
+++ b/templates/sample2.html
@@ -22,7 +22,7 @@
         tr:nth-child(even) {
             background-color: #dddddd;
         }
-        /*.reportGraph {width:900px}*/
+        .reportGraph {width:900px}
         @media print {
             .new-page {
                 page-break-before: always;
