--- a/templates/sample2.html
+++ b/templates/sample2.html
@@ -35,6 +35,8 @@
 <body>
 <h3>{{ .Title }}</h3>
 <p>{{.Description}}</p>
+<hr/>
+<div><img src="{{ .AddPath }}" width="100%" height="100%"/></div>
 <table>
     <thead>
     <tr>
