--- a/templates/sample2.html
+++ b/templates/sample2.html
@@ -36,7 +36,7 @@
 <h3>{{ .Title }}</h3>
 <p>{{.Description}}</p>
 <hr/>
-<div><img src="img.jpg" /></div>
+<div><img src="/qr.png" /></div>
 <table>
     <thead>
     <tr>
