--- a/templates/test.html
+++ b/templates/test.html
@@ -36,7 +36,7 @@
 <h3>HTML to PDF generator</h3>
 <p>This is the simple HTML to PDF file.</p>
 <hr/>
-<div><img src="img.jpg" /></div>
+<div><img src="qr.png" /></div>
 <table>
     <thead>
     <tr>
