--- a/templates/sample2.html
+++ b/templates/sample2.html
@@ -55,7 +55,7 @@
 </table>
 <p class="new-page">Page 2, paragraph 1</p>
 <div class="reportGraph"><canvas id="canvas"></canvas></div>
-
+<div>{{ .Labels }}</div>
 
 <script type="text/javascript">
     'use strict';
