--- a/templates/sample2.html
+++ b/templates/sample2.html
@@ -85,7 +85,8 @@
             labels: {{ .Labels }},
             datasets: [{
                 label: '# of Votes',
-                data: [12, 19, 3, 5, 2, 3],
+                // data: [12, 19, 3, 5, 2, 3],
+                data: {{ .data }},
                 backgroundColor: [
                     'rgba(255, 99, 132, 0.2)',
                     'rgba(54, 162, 235, 0.2)',
