pass data to javascript

--- a/templates/sample2.html
+++ b/templates/sample2.html
@@ -86,7 +86,7 @@
             datasets: [{
                 label: '# of Votes',
                 // data: [12, 19, 3, 5, 2, 3],
-                data: {{ .data }},
+                data: {{ .Data }},
                 backgroundColor: [
                     'rgba(255, 99, 132, 0.2)',
                     'rgba(54, 162, 235, 0.2)',
