--- a/templates/sample2.html
+++ b/templates/sample2.html
@@ -7,9 +7,10 @@
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-gH2yIJqKdNHPEq0n4Mqa/HGKIhSkIHeL5AyhkYV8i59U5AR6csBvApHHNl/vI1Bx" crossorigin="anonymous">
     <style>
-        h3{
+        h3 {
             text-align: center;
         }
+
         .tb1 table {
             font-family: arial, sans-serif;
             border-collapse: collapse;
@@ -21,32 +22,64 @@
             text-align: center;
             padding: 8px;
         }
-		.tb1 th{
-			border: 1px solid #88fcce;
-			background-color:#a0fad6;
-			text-align: center;
+
+        .tb1 th {
+            border: 1px solid #88fcce;
+            background-color: #a0fad6;
+            text-align: center;
             padding: 5px;
-		}
-		
-		.tb2 table {
+        }
+
+        .tb2 table {
             font-family: arial, sans-serif;
             border-collapse: collapse;
             width: 100%;
         }
-        
+
         .tb2 td {
-            
+
             padding: 2px;
         }
-		/*
-        .tb1 th{
-			border: 1px solid #88fcce;
-			background-color:#a0fad6;
-			text-align: center;
-            padding: 8px;
-		}
-		*/
-        
+
+
+        .tb3 table {
+            font-family: sans-serif;
+            border-collapse: collapse;
+            width: 100%;
+        }
+
+        .tb3 td {
+            border: thin solid #908787;
+            text-align: center;
+            padding: 5px;
+        }
+
+        .tb3 th {
+            border: thin solid #908787;
+            text-align: center;
+            padding: 5px;
+        }
+
+
+        .tb4 table {
+            font-family: sans-serif;
+            border-collapse: collapse;
+            width: 100%;
+            font-size: 10px;
+        }
+
+        .tb4 td {
+            border: thin solid #908787;
+            text-align: center;
+            padding: 5px;
+        }
+
+        .tb4 th {
+            border: thin solid #908787;
+            text-align: center;
+            padding: 5px;
+        }
+
 
         .reportGraph {
             width: 900px
@@ -65,19 +98,189 @@
 </head>
 
 <body>
+    <div class="container-fuild">
+        <div class="row">
+            <div class="col-10">
+                <table class="tb2 ">
+                    <tbody>
+                        <tr>
+                            <td width="10%">
+                                <img src="img/Logo-IPST.png" width="70px" height="90px" />
+                            </td>
+                            <td width="90%">
+                                <p class="mx-3">
+                                    แบบรายงานผลคะแนนสอบรายบุคคลคณิตศาสตร์<br>
+                                    โครงการพัฒนาอัจฉริยภาพทางวิทยาศาสตร์และคณิดศาสตร์ ประจำปีการศึกษา 2564
+                                </p>
+                            </td>
+                        </tr>
+                    </tbody>
+                </table>
+                <div class="card border border-warning">
+                    <div class="card-header bg-warning bg-opacity-25 text-black">
+                        1.ข้อมูลผู้เข้าสอบ
+                    </div>
+                    <div class="card-body">
+                        <div class="row">
+                            <div class="col-12">ชื่อ - นามสกุล</div>
+                        </div>
+                        <div class="row">
+                            <div class="col-6">เลขประจำตัวประชาชน</div>
+                            <div class="col-6">เลขประจำตัวผู้เข้าสอบ</div>
+                        </div>
+                        <div class="row">
+                            <div class="col-12">ระดับชั้นประถมศึกษาปีที่ 6</div>
+                        </div>
+                        <div class="row">
+                            <div class="col-6">โรงเรียน</div>
+                            <div class="col-6">จังหวัด</div>
+                        </div>
+                    </div>
+                </div>
+
+            </div>
+            <div class="col-2">
+                <img src="qr.png" class="w-75 img-thumbnail float-end border border-0">
+                <img src="img/m.png" class="w-75 img-thumbnail float-end border border-0">
+            </div>
+        </div>
+        <div class="card border border-warning mt-2">
+            <div class="card-header bg-warning bg-opacity-25 text-black">
+                2.สถิติของคะแนน
+            </div>
+            <div class="card-body">
+                <div class="row">
+                    <div class="col-8"></div>
+                    <div class="col-4 ">
+                        <table class="tb2 ">
+                            <tbody>
+                                <tr>
+                                    <td width="40%" align="right">
+                                        <img src="img/r.png" class="w-100 float-end px-0 mx-0" />
+                                    </td>
+                                    <td align="left" width="60%">
+                                        <table class="tb2  ml-0" style="font-size:12px;width:80%">
+                                            <tbody>
+                                                <tr>
+                                                    <td align="right">คะแนนเต็ม:</td>
+                                                    <td align="right">25.00</td>
+                                                </tr>
+                                                <tr>
+                                                    <td align="right">คะแนนที่ได้:</td>
+                                                    <td align="right">24.00</td>
+                                                </tr>
+                                                <tr>
+                                                    <td align="right">เปอร์เซ็นต์ไทล์:</td>
+                                                    <td align="right">99.00</td>
+                                                </tr>
+                                            </tbody>
+                                        </table>
+                                    </td>
+                                </tr>
+                            </tbody>
+                        </table>
+                    </div>
+                </div>
+                <div class="row">
+                    <div class="col-12">
+                        <div class="mx-auto my-2 reportGraph"><canvas id="bar" class=""></canvas></div>
+                    </div>
+                </div>
+                <div class="row">
+                    <div class="col-12">
+                        <table class="tb3 w-100 rounded" style="font-size:12px;">
+                            <tbody>
+                                <tr class="bg-warning bg-opacity-25">
+                                    <td colspan="4"><b>ค่าสถิติพื้นฐานของคะแนนของกลุ่มผู้เข้าสอบทั้งหมด</b></td>
+                                </tr>
+                                <tr class="bg-warning bg-opacity-25">
+                                    <td>จำนวนผู้เข้าสอบทั้งหมด<br />(คน)</td>
+                                    <td>คะแนน<br />ต่ำสุด - สูงสุด</td>
+                                    <td>คะแนนเฉลี่ย</td>
+                                    <td>ส่วนเบี่ยงเบนมาตราฐาน</td>
+                                </tr>
+                                <tr>
+                                    <td>8.656</td>
+                                    <td>0.00 - 24.00 </td>
+                                    <td>3.41 </td>
+                                    <td>3.62 </td>
+                                </tr>
+                            </tbody>
+                        </table>
+                    </div>
+                </div>
+                <hr class="border border-success bg-success" style="height:5px;" />
+                <div class="row">
+                    <div class="col-12">
+                        <table class="w-100">
+                            <tbody>
+                                <tr>
+                                    <td>
+                                        <table class="tb4 w-100 rounded" style="font-size:12px;">
+                                            <tbody>
+                                                <tr class="bg-secondary bg-opacity-25">
+                                                    <td colspan="4">
+                                                        <b>ค่าสถิติพื้นฐานของคะแนนของกลุ่มผู้เข้าสอบทั้งหมด</b></td>
+                                                </tr>
+                                                <tr class="bg-secondary bg-opacity-25">
+                                                    <td>จำนวนผู้เข้าสอบทั้งหมด<br />(คน)</td>
+                                                    <td>คะแนน<br />ต่ำสุด - สูงสุด</td>
+                                                    <td>คะแนนเฉลี่ย</td>
+                                                    <td>ส่วนเบี่ยงเบนมาตราฐาน</td>
+                                                </tr>
+                                                <tr>
+                                                    <td>8.656</td>
+                                                    <td>0.00 - 24.00 </td>
+                                                    <td>3.41 </td>
+                                                    <td>3.62 </td>
+                                                </tr>
+                                            </tbody>
+                                        </table>
+                                    </td>
+                                    <td>
+                                        <table class="tb4 w-100 rounded" style="font-size:12px;">
+                                            <tbody>
+                                                <tr class="bg-danger bg-opacity-25">
+                                                    <td colspan="4">
+                                                        <b>ค่าสถิติพื้นฐานของคะแนนของกลุ่มผู้เข้าสอบทั้งหมด</b></td>
+                                                </tr>
+                                                <tr class="bg-danger bg-opacity-25">
+                                                    <td>จำนวนผู้เข้าสอบทั้งหมด<br />(คน)</td>
+                                                    <td>คะแนน<br />ต่ำสุด - สูงสุด</td>
+                                                    <td>คะแนนเฉลี่ย</td>
+                                                    <td>ส่วนเบี่ยงเบนมาตราฐาน</td>
+                                                </tr>
+                                                <tr>
+                                                    <td>8.656</td>
+                                                    <td>0.00 - 24.00 </td>
+                                                    <td>3.41 </td>
+                                                    <td>3.62 </td>
+                                                </tr>
+                                            </tbody>
+                                        </table>
+                                    </td>
+                                </tr>
+                            </tbody>
+                        </table>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </div>
+    <p class="new-page"></p>
     <div class="card border border-warning">
         <div class="card-header bg-warning bg-opacity-25 text-black">
             3.ผลการทดสอบจำแนกตามตัวชี้วัดอัจฉริยะลักษณะทางคณิตศาสตร์ ตามแนวทาง สสวท.
         </div>
         <div class="card-body">
             <table class="tb1">
-                <thead >
+                <thead>
                     <tr>
-                        <th width="20%" >ตัวชี้วัด</th>
-                        <th width="20%" >จำนวนข้อทั้งหมด</th>
-                        <th width="20%" >จำนวนข้อที่ตอบถูก</th>
-                        <th width="20%" >ร้อยละข้อที่ตอบถูก</th>
-                        <th width="20%" >ค่าเฉลี่ยของร้อยละข้อที่ตอบถูกของผู้เข้าสอบทั้งหมด</th>
+                        <th width="20%">ตัวชี้วัด</th>
+                        <th width="20%">จำนวนข้อทั้งหมด</th>
+                        <th width="20%">จำนวนข้อที่ตอบถูก</th>
+                        <th width="20%">ร้อยละข้อที่ตอบถูก</th>
+                        <th width="20%">ค่าเฉลี่ยของร้อยละข้อที่ตอบถูกของผู้เข้าสอบทั้งหมด</th>
                     </tr>
                 </thead>
                 <tbody>
@@ -125,12 +328,12 @@
                     </tr>
                 </tbody>
             </table>
-            <div class="border border-info mx-auto my-2 reportGraph"><canvas id="canvas" class=""></canvas></div>
+            <div class="border border-info mx-auto my-2 reportGraph"><canvas id="radar" class=""></canvas></div>
             <table class="tb2 table table-borderless">
                 <tbody>
                     <tr>
                         <td colspan="2">ตัวชี้วัดอัจฉริยะลักษณะทางคณิตศาสตร์ ตามแนวทาง สสวท.</td>
-                        
+
                     </tr>
                     <tr>
                         <td>S1 คือ</td>
@@ -138,7 +341,8 @@
                     </tr>
                     <tr>
                         <td></td>
-                        <td>เป็นความสามารถในการทำความเข้าใจปัญหา คิดวิเคราะห์ วางแผน แก้ปัญหา และเลือกใช้วิธีการที่เหมาะสม โดยคำนึงถึง</td>
+                        <td>เป็นความสามารถในการทำความเข้าใจปัญหา คิดวิเคราะห์ วางแผน แก้ปัญหา
+                            และเลือกใช้วิธีการที่เหมาะสม โดยคำนึงถึง</td>
                     </tr>
                     <tr>
                         <td></td>
@@ -158,7 +362,8 @@
                     </tr>
                     <tr>
                         <td></td>
-                        <td>เป็นความสำมารถในการใช้ความรู้ทางคณิตศาสตร์เป็นเครื่องมือในการเรียนรู้คณิตศาสตร์เนื้อหาต่าง ๆ หรือศาสตร์อื่น ๆ</td>
+                        <td>เป็นความสำมารถในการใช้ความรู้ทางคณิตศาสตร์เป็นเครื่องมือในการเรียนรู้คณิตศาสตร์เนื้อหาต่าง ๆ
+                            หรือศาสตร์อื่น ๆ</td>
                     </tr>
                     <tr>
                         <td></td>
@@ -170,7 +375,8 @@
                     </tr>
                     <tr>
                         <td></td>
-                        <td>เป็นพฤติกรรมที่บ่งบอกถึงความสนใจทางคณิศาสตร์ เช่น แสดงความเข้าใจเนื้อหาคณิตศาสตร์และอธิบายได้</td>
+                        <td>เป็นพฤติกรรมที่บ่งบอกถึงความสนใจทางคณิศาสตร์ เช่น
+                            แสดงความเข้าใจเนื้อหาคณิตศาสตร์และอธิบายได้</td>
                     </tr>
                     <tr>
                         <td>A2 คือ</td>
@@ -189,15 +395,15 @@
                         <td>เป็นพฤติกรรมที่บ่งบอกความสามารถในการนำข้อมูลที่มีมาสร้างสรรค์ให้เกิดเป็นองค์ความรู้ใหม่</td>
                     </tr>
                 </tbody>
-              </table>
+            </table>
         </div>
     </div>
-	<!--
+    <!--
 	<p class="new-page">Page 2, paragraph 1</p>
 	<div class="reportGraph"><canvas id="canvas"></canvas></div>
 	-->
 
-    
+
     <script type="text/javascript">
         'use strict';
         (function (setLineDash) {
@@ -215,7 +421,10 @@
                 return fn.apply(thisp, arguments);
             };
         };
-        const ctx = document.getElementById('canvas');
+
+
+
+        const ctx = document.getElementById('radar');
         const options = {
             scale: {
 
@@ -285,7 +494,95 @@
             data: data,
             options: options
         });
+        //#############################################################################################
+        
+        new Chart(document.getElementById("bar"), {
+            type: 'bar',
+            data: {
+                labels: [1, 2, 3, 4, 5, 6, 7, 8, 9, 10, 11, 12, 13, 14, 15, 16, 17, 18, 19, 20, 21, 22, 23, 24, 25],
+                datasets: [
+                    {
+                        label: "Population (millions)",
+                        backgroundColor: "#3e95cd",
+                        data: [1458, 1848, 1473, 911, 661, 441, 410, 309, 254, 219, 164, 130, 95, 81, 45, 46, 49, 28, 9, 9, 8, 4, 2, 1, 1, 0]
+                    }
+                ]
+            },
+            plugins: [{
+                id: 'customImage',
+                afterDatasetDraw: (chart, options) => {
+                    const actualIcon = new Image();
+                    actualIcon.src = 'img/m.png';
+					actualIcon.width='10%';
+					actualIcon.height='10%';
+                    const {
+                            top,
+                            left,
+                            width,
+                            height
+                    } = chart.chartArea;
+                    const meta = chart.getDatasetMeta(0);
+                    const x = meta.data[24]._model.x-15;
+                    //const y = meta.data[0]._model.y;
+					const y = top;
+					
+                    actualIcon.onload = () => {
+                        chart.ctx.drawImage(actualIcon, x,y ,30,30);
+                    }
+                },
 
+
+            }],
+            options: {
+
+                "hover": {
+                    "animationDuration": 0
+                },
+                "animation": {
+                    "duration": 1,
+                    "onComplete": function () {
+                        var chartInstance = this.chart,
+                            ctx = chartInstance.ctx;
+
+                        ctx.font = Chart.helpers.fontString(Chart.defaults.global.defaultFontSize, Chart.defaults.global.defaultFontStyle, Chart.defaults.global.defaultFontFamily);
+                        ctx.textAlign = 'center';
+                        ctx.textBaseline = 'bottom';
+
+                        this.data.datasets.forEach(function (dataset, i) {
+                            var meta = chartInstance.controller.getDatasetMeta(i);
+                            meta.data.forEach(function (bar, index) {
+                                var data = dataset.data[index];
+                                ctx.fillText(data, bar._model.x, bar._model.y - 5);
+                            });
+                        });
+                    }
+                },
+                legend: { display: false },
+                title: {
+                    display: true,
+                    text: 'คะแนน',
+                    position: 'bottom',
+                    align: 'center',
+                },
+                scales: {
+                    xAxes: [{
+                        gridLines: {
+                            display: false
+                        }
+                    }],
+                    yAxes: [
+                        {
+                            ticks: {
+                                max: 5000,
+                                display: true,
+                                beginAtZero: true,
+                                stepSize: 500,
+                            }
+                        }
+                    ]
+                }
+            }
+        });
     </script>
 </body>
 
