--- a/templates/sample2.html
+++ b/templates/sample2.html
@@ -109,7 +109,7 @@
                             </td>
                             <td width="90%">
                                 <p class="mx-3">
-                                    แบบรายงานผลคะแนนสอบรายบุคคลคณิตศาสตร์<br>
+                                    แบบรายงานผลคะแนนสอบรายบุคคล<span style="font-weight: bold;font-size:24px;">คณิตศาสตร์</span><br>
                                     โครงการพัฒนาอัจฉริยภาพทางวิทยาศาสตร์และคณิดศาสตร์ ประจำปีการศึกษา 2564
                                 </p>
                             </td>
