--- a/templates/sample2.html
+++ b/templates/sample2.html
@@ -7,6 +7,7 @@
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-gH2yIJqKdNHPEq0n4Mqa/HGKIhSkIHeL5AyhkYV8i59U5AR6csBvApHHNl/vI1Bx" crossorigin="anonymous">
     <style>
+        
         h3 {
             text-align: center;
         }
@@ -84,11 +85,14 @@
         .reportGraph {
             width: 900px
         }
-
+        body{
+                margin:30px;
+            }
         @media print {
             .new-page {
                 page-break-before: always;
             }
+           
         }
     </style>
     <!--<script src="https://cdnjs.com/libraries/Chart.js"></script>-->
