--- a/templates/sample2.html
+++ b/templates/sample2.html
@@ -495,6 +495,7 @@
         }
         var myRadarChart = new Chart(ctx, {
             type: 'radar',
+            responsive: true,
             data: data,
             options: options
         });
