--- a/templates/sample2.html
+++ b/templates/sample2.html
@@ -109,7 +109,7 @@
                     <tbody>
                         <tr>
                             <td width="10%">
-                                <img src="img/Logo-IPST.png" width="70px" height="90px" />
+                                <img src="img/Logo-IPST-small.png" width="70px" height="90px" />
                             </td>
                             <td width="90%">
                                 <p class="mx-3">
@@ -145,7 +145,7 @@
             </div>
             <div class="col-2">
                 <img src="{{ .Qrcode }}" class="w-75 img-thumbnail float-end border border-0">
-                <img src="img/m.png" class="w-75 img-thumbnail float-end border border-0">
+                <img src="img/m-small.png" class="w-75 img-thumbnail float-end border border-0">
             </div>
         </div>
         <div class="card border border-warning mt-2">
