--- a/templates/sample2.html
+++ b/templates/sample2.html
@@ -4,8 +4,9 @@
 <head>
     <meta charset="UTF-8">
     <title>Example Pdf</title>
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0/dist/css/bootstrap.min.css" rel="stylesheet"
-        integrity="sha384-gH2yIJqKdNHPEq0n4Mqa/HGKIhSkIHeL5AyhkYV8i59U5AR6csBvApHHNl/vI1Bx" crossorigin="anonymous">
+    <!-- <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0/dist/css/bootstrap.min.css" rel="stylesheet" 
+        integrity="sha384-gH2yIJqKdNHPEq0n4Mqa/HGKIhSkIHeL5AyhkYV8i59U5AR6csBvApHHNl/vI1Bx" crossorigin="anonymous"> -->
+    <link href="css/bootstrap.min.css" rel="stylesheet">
     <style>
         
         h3 {
@@ -159,10 +160,10 @@
                         <table class="tb2 ">
                             <tbody>
                                 <tr>
-                                    <td width="40%" align="right">
+                                    <td width="35%" align="right">
                                         <img src="img/r.png" class="w-100 float-end px-0 mx-0" />
                                     </td>
-                                    <td align="left" width="60%">
+                                    <td align="left" width="65%">
                                         <table class="tb2  ml-0" style="font-size:12px;width:80%">
                                             <tbody>
                                                 <tr>
