--- a/templates/sample4.html
+++ b/templates/sample4.html
@@ -8,6 +8,12 @@
     <!-- <link href="css/bootstrap.min.css" rel="stylesheet"> -->
     <link href="css/styles2.css" rel="stylesheet">
     <script src="js/chart.min.js"></script>
+    <style>
+        .section{
+            flex-grow:1;
+            padding:{{ .MY }}px {{ .MX }}px;
+        }
+    </style>
 </head>
     <body>
         <div class="container">
