--- a/templates/sample4.html
+++ b/templates/sample4.html
@@ -186,7 +186,7 @@
                         <tr><th>3.ผลการทดสอบจำแนกตามตัวชี้วัดอัจฉริยะลักษณะทางคณิตศาสตร์</th></tr>
                         <tr>
                             <td>
-                                <table class="w-100 bordered" style="font-size:12px;text-align:center;font-family: arial, sans-serif;">
+                                <table class="w-100 bordered" style="font-size:12px;text-align:center;">
                                     <thead>
                                         <tr>
                                             <th width="20%" style="text-align:center;background-color: #a0fad6;">ตัวชี้วัด</th>
