--- a/templates/sample4.html
+++ b/templates/sample4.html
@@ -24,7 +24,6 @@
     <body>
         <div class="container">
             <div class="section">
-
                 <table >
                     <tr>
                         <td width="95%" valign="top" >
@@ -69,14 +68,14 @@
                         <td  align="right">
                             <table  style="width:40%;">
                                 <tbody>
-                                    <tr style="background-color:transparent;">
+                                    <tr >
                                         <td width="50%" align="right">
                                             <img src="img/r.png" width="80xp" height="90px" />
                                         </td>
                                         <td align="right" width="50%">
                                             <table  style="font-size:12px;width:100%">
                                                 <tbody>
-                                                    <tr style="background-color:transparent;">
+                                                    <tr>
                                                         <td align="right" style="padding:5px;">คะแนนเต็ม:</td>
                                                         <td align="right" style="padding:5px;">25.00</td>
                                                     </tr>
@@ -84,7 +83,7 @@
                                                         <td align="right" style="padding:5px;">คะแนนที่ได้:</td>
                                                         <td align="right" style="padding:5px;">24.00</td>
                                                     </tr>
-                                                    <tr style="background-color:transparent;">
+                                                    <tr >
                                                         <td align="right" style="padding:5px;">เปอร์เซ็นต์ไทล์:</td>
                                                         <td align="right" style="padding:5px;">99.00</td>
                                                     </tr>
@@ -98,7 +97,7 @@
                     </tr>
                     <tr>
                         <td class="w-100">
-                            <div style="width:960px;margin:0 auto;">
+                            <div style="width:900px;">
                                 <canvas id="bar" ></canvas>
                             </div>
                         </td>
@@ -107,14 +106,14 @@
                         <td>
                             <table class="w-100 bordered" style="font-size:12px;text-align:center">
                                 <tbody>
-                                    <tr >
-                                        <th  colspan="4" style="text-align:center;background-color: rgb(245, 214, 158);">ค่าสถิติพื้นฐานของคะแนนของกลุ่มผู้เข้าสอบทั้งหมด</th>
+                                    <tr class="bg-orange">
+                                        <th  colspan="4" style="text-align:center;">ค่าสถิติพื้นฐานของคะแนนของกลุ่มผู้เข้าสอบทั้งหมด</th>
                                     </tr>
-                                    <tr style="background-color: rgb(245, 214, 158);">
-                                        <td style="text-align:center;background-color: rgb(245, 214, 158);">จำนวนผู้เข้าสอบทั้งหมด<br />(คน)</td>
-                                        <td style="text-align:center;background-color: rgb(245, 214, 158);">คะแนน<br />ต่ำสุด - สูงสุด</td>
-                                        <td style="text-align:center;background-color: rgb(245, 214, 158);">คะแนนเฉลี่ย</td>
-                                        <td style="text-align:center;background-color: rgb(245, 214, 158);">ส่วนเบี่ยงเบนมาตราฐาน</td>
+                                    <tr class="bg-orange">
+                                        <td >จำนวนผู้เข้าสอบทั้งหมด<br />(คน)</td>
+                                        <td >คะแนน<br />ต่ำสุด - สูงสุด</td>
+                                        <td >คะแนนเฉลี่ย</td>
+                                        <td >ส่วนเบี่ยงเบนมาตราฐาน</td>
                                     </tr>
                                     <tr>
                                         <td>8.656</td>
@@ -125,21 +124,21 @@
                                 </tbody>
                             </table>
                             
-                            <table style="width:100%;background-color:white;padding:0px;margin-top:4px;">
+                            <table style="width:100%;padding:0px;margin-top:4px;">
                                 <tbody>
-                                    <tr style="background-color:white;">
+                                    <tr>
                                         <td style="padding:0px;">
                                             <table class="w-100 bordered" style="font-size:12px;text-align:center">
                                                 <tbody>
-                                                    <tr >
-                                                        <td style="background-color:lightblue" colspan="4">
+                                                    <tr class="bg-lightblue">
+                                                        <td  colspan="4">
                                                             <b>ค่าสถิติพื้นฐานของคะแนนของกลุ่มผู้เข้าสอบทั้งหมด</b></td>
                                                     </tr>
-                                                    <tr >
-                                                        <td style="background-color:lightblue">จำนวนผู้เข้าสอบทั้งหมด<br />(คน)</td>
-                                                        <td style="background-color:lightblue">คะแนน<br />ต่ำสุด - สูงสุด</td>
-                                                        <td style="background-color:lightblue">คะแนนเฉลี่ย</td>
-                                                        <td style="background-color:lightblue">ส่วนเบี่ยงเบนมาตราฐาน</td>
+                                                    <tr class="bg-lightblue">
+                                                        <td >จำนวนผู้เข้าสอบทั้งหมด<br />(คน)</td>
+                                                        <td >คะแนน<br />ต่ำสุด - สูงสุด</td>
+                                                        <td >คะแนนเฉลี่ย</td>
+                                                        <td >ส่วนเบี่ยงเบนมาตราฐาน</td>
                                                     </tr>
                                                     <tr>
                                                         <td>8.656</td>
@@ -153,15 +152,15 @@
                                         <td style="padding:0px;">
                                             <table class="w-100 bordered" style="font-size:12px;text-align:center">
                                                 <tbody>
-                                                    <tr >
-                                                        <td style="background-color:lightpink" colspan="4">
+                                                    <tr class="bg-lightpink">
+                                                        <td  colspan="4">
                                                             <b>ค่าสถิติพื้นฐานของคะแนนของกลุ่มผู้เข้าสอบทั้งหมด</b></td>
                                                     </tr>
-                                                    <tr >
-                                                        <td style="background-color:lightpink">จำนวนผู้เข้าสอบทั้งหมด<br />(คน)</td>
-                                                        <td style="background-color:lightpink">คะแนน<br />ต่ำสุด - สูงสุด</td>
-                                                        <td style="background-color:lightpink">คะแนนเฉลี่ย</td>
-                                                        <td style="background-color:lightpink">ส่วนเบี่ยงเบนมาตราฐาน</td>
+                                                    <tr class="bg-lightpink">
+                                                        <td >จำนวนผู้เข้าสอบทั้งหมด<br />(คน)</td>
+                                                        <td >คะแนน<br />ต่ำสุด - สูงสุด</td>
+                                                        <td >คะแนนเฉลี่ย</td>
+                                                        <td >ส่วนเบี่ยงเบนมาตราฐาน</td>
                                                     </tr>
                                                     <tr>
                                                         <td>8.656</td>
@@ -178,8 +177,6 @@
                         </td>
                     </tr>
                 </table>
-            
-           
                 <div class="new-page"></div>
                 <table class="roundedCorners w-100">
                     <tbody>
@@ -189,11 +186,11 @@
                                 <table class="w-100 bordered" style="font-size:12px;text-align:center;">
                                     <thead>
                                         <tr>
-                                            <th width="20%" style="text-align:center;background-color: #a0fad6;">ตัวชี้วัด</th>
-                                            <th width="20%" style="text-align:center;background-color: #a0fad6;">จำนวนข้อทั้งหมด</th>
-                                            <th width="20%" style="text-align:center;background-color: #a0fad6;">จำนวนข้อที่ตอบถูก</th>
-                                            <th width="20%" style="text-align:center;background-color: #a0fad6;">ร้อยละข้อที่ตอบถูก</th>
-                                            <th width="20%" style="text-align:center;background-color: #a0fad6;">ค่าเฉลี่ยของร้อยละข้อที่ตอบถูก<br>ของผู้เข้าสอบทั้งหมด</th>
+                                            <th width="20%" class="bg-lightgreen" style="text-align:center;">ตัวชี้วัด</th>
+                                            <th width="20%" class="bg-lightgreen" style="text-align:center;">จำนวนข้อทั้งหมด</th>
+                                            <th width="20%" class="bg-lightgreen" style="text-align:center;">จำนวนข้อที่ตอบถูก</th>
+                                            <th width="20%" class="bg-lightgreen" style="text-align:center;">ร้อยละข้อที่ตอบถูก</th>
+                                            <th width="20%" class="bg-lightgreen" style="text-align:center;">ค่าเฉลี่ยของร้อยละข้อที่ตอบถูก<br>ของผู้เข้าสอบทั้งหมด</th>
                                         </tr>
                                     </thead>
                                     <tbody>
